[package]
name = "pack2"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "windows ipv4 packet sniffing"
documentation = "https://docs.rs/pack2"
readme = "README.md"
repository = "https://github.com/chronicl/pack2"
keywords = ["windows", "packet", "sniffing"]
categories = ["network-programming"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[dependencies]
socket2 = {version = "0.4.4", features = ["all"]}
thiserror = "1"

[dependencies.windows]
version = "0.37.0"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_Networking_WinSock", 
    "Win32_System_IO"
]

[dev-dependencies]
etherparse = "0.10"